tests/ui/converter_with_skip_setter.stderr
error: Field-level converter is incompatible with skip_setter
       note: #[builder(converter)] and #[builder(skip_setter)] are incompatible
       help: remove one of these attributes
 --> tests/ui/converter_with_skip_setter.rs:3:10
  |
3 | #[derive(TypeStateBuilder)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TypeStateBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
